fix: fix tags not being visible on blog posts because of white background

--- a/src/app/shared/ui-components/tag-list/tag-list.component.scss
+++ b/src/app/shared/ui-components/tag-list/tag-list.component.scss
@@ -1,6 +1,6 @@
 @import 'src/styles.scss';
 
-.blog-post-tag-container{
+.tag-list {
   width: 100%;
   display: flex;
   flex-direction: row;
