--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -3,6 +3,6 @@ $card-boarder-radius: 0.625rem;
 $main-content-vertical-padding-sm-down: 10px;
 $main-content-horizontal-padding-sm-down: 10px;
 $main-content-vertical-padding-sm-up: 20px;
-$main-content-horizontal-padding-sm-up: 60px;
+$main-content-horizontal-padding-sm-up: 70px;
 
 $tag-height: calc(1.2rem + 4px); // 1.2rem line-height + 2px padding top and 2px padding bottom
